# pi0-lerobot

./: .gitignore  .pixi.sh  README.md  pyproject.toml
notebooks/: 01_load_lerobot_dataset.ipynb  02_evaluate_pretrained_policy.ipynb  03_train_policy.ipynb  hand_fitting_optim.ipynb
notebooks/hand_optimization/: 01_joint_only_optim.ipynb  02_joint_only_calibration.ipynb  03_joints_scale_calib.ipynb  04_end_to_end_explained.ipynb
notebooks/outputs/train/example_pusht_diffusion/: config.json
src/pi0_aloha/apis/: tesnordict_test.py  visualize_dataset_rerun.py
src/pi0_lerobot/: custom_types.py  mano_utils.py  manopt_manolayer.py  multiview_pose_estimator.py  pt_multiview_pose_estimator.py  rerun_log_utils.py  vggt_load_utils.py  video_io.py
src/pi0_lerobot/apis/: benchmark.py  camera_calibration.py  mano_jax_inference.py  old_person_detectio.py  person_detection.py  pi0_inference.py  video_decode_benchmark.py  visualize_assembly.py  visualize_exo_ego.py
src/pi0_lerobot/data/: assembly101.py  base_exoego_dataset.py  hocap.py
src/pi0_lerobot/gradio_ui/: pose_estimation_ui.py
src/pi0_lerobot/mano/: kinematic_hand_jax.py  kinematic_hand_optim_jax.py  mano_jax.py  mano_jax_simple.py  mano_optim_jax.py  mano_optimization_jax.py  mano_pytorch_simple.py  mano_utils.py  manopt_manolayer.py
src/pi0_lerobot/skeletons/: assembly_hand.py  coco_133.py  coco_17.py
tools/: arflow-test.py  benchmark.py  benchmark_multivideo.py  camera_calibration.py  gradio_app.py  mano_jax.py  person_detection_assembly.py  pi0_inference.py  tensordict_test.py  view_dataset.py  view_exo_ego.py  view_lerobot_dataset.py  visualize_assembly.py  wilor_inference.py
