[project]
authors = [{ name = "pablovela5620", email = "pablovela5620@gmail.com" }]
description = "Add a short description here"
name = "pi0-lerobot"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [
    "tensordict>=0.7.0,<0.8",
    "wadler-lindig>=0.1.3,<0.2",
    "onnxruntime-gpu>=1.20.1,<2",
    "ipython-beartype>=0.1.0,<0.2",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12.4"

[tool.pixi.activation]
scripts = [".pixi.sh"]

[tool.pixi.pypi-dependencies]
pi0_lerobot = { path = ".", editable = true }
openpi = { git = "https://github.com/Physical-Intelligence/openpi.git", rev = "f543cb1d87ada91645b1484ca5dab6ac3749be8d" }
openpi-client = { git = "https://github.com/Physical-Intelligence/openpi.git", subdirectory = "packages/openpi-client" }
lerobot = { git = "https://github.com/huggingface/lerobot", rev = "8548a87bd49c19bcda64cf0d6f205a378c1cebc3", extras = [
    "pusht",
] }
simplecv = { git = "https://github.com/pablovela5620/simplecv.git" }
rtmlib = { git = "https://github.com/pablovela5620/rtmlib.git" }
torch = { version = ">=2.5.1", index = "https://download.pytorch.org/whl/cu124" }
torchvision = { version = ">=0.20.1", index = "https://download.pytorch.org/whl/cu124" }
torchcodec = { version = ">=0.2.0", index = "https://download.pytorch.org/whl/cu124" }
rerun-sdk = { url = "https://files.pythonhosted.org/packages/1e/db/3ce2be017d7d4ac0948fb064bf7417b36c96bc07d1b8a922017606ba03c6/rerun_sdk-0.22.1-cp38-abi3-manylinux_2_31_x86_64.whl" }

[tool.pixi.tasks]
notebook_tutorial = { cmd = "jupyter lab notebooks", description = "Starts jupyter lab with notebooks for lerobot tutorials" }

[tool.pixi.tasks._download-assembly101-sample]
cmd = """
huggingface-cli download pablovela5620/Assembly101-Sample \
  --repo-type dataset \
  --include "assembly101-sample/**" \
  --local-dir data/
"""
outputs = ["data/assembly101-sample"]
description = "Downloads an example aseembly101 dataset from huggingface"

[tool.pixi.tasks.visualize-assembly101-dataset]
cmd = """
python tools/visualize_assembly.py
"""
depends-on = ["_download-assembly101-sample"]
description = "Shows visualization of annotations in assembly101 dataset"

[tool.pixi.tasks.assembly101-pose-estimation]
cmd = """
python tools/person_detection_assembly.py
"""
depends-on = ["_download-assembly101-sample"]
description = "Runs 2d pose estimation and triangulation on body for assembly101 dataset"

[tool.pixi.dependencies]
python = "==3.11"
# rerun-sdk = "==0.22.0"
numpy = "<2"
pytest = ">=8.3.4,<9"
icecream = ">=2.1.4,<3"
jupyterlab = ">=4.3.5,<5"
mmengine = ">=0.10.5,<0.11"
py-opencv = ">=4.11.0,<5"
cudnn = ">=9.7.1.26,<10"
orjson = ">=3.10.15,<4"

[tool.ruff]
line-length = 120
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = [
    "E501", # Line too long.
    "F722", # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "F821", # Forward annotation false positive from jaxtyping. Should be caught by pyright.
]
