[project]
authors = [{ name = "pablovela5620", email = "pablovela5620@gmail.com" }]
description = "Add a short description here"
name = "pi0-lerobot"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [
    "tensordict>=0.7.0,<0.8",
    "wadler-lindig>=0.1.3,<0.2",
    "onnxruntime-gpu>=1.20.1,<2",
    "ipython-beartype>=0.1.0,<0.2",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12.4"

[tool.pixi.activation]
scripts = [".pixi.sh"]


[tool.pixi.pypi-dependencies]
pi0_lerobot = { path = ".", editable = true }
openpi = { git = "https://github.com/Physical-Intelligence/openpi.git", rev = "f543cb1d87ada91645b1484ca5dab6ac3749be8d" }
openpi-client = { git = "https://github.com/Physical-Intelligence/openpi.git", subdirectory = "packages/openpi-client" }
lerobot = { git = "https://github.com/huggingface/lerobot", rev = "8548a87bd49c19bcda64cf0d6f205a378c1cebc3", extras = [
    "pusht",
] }
simplecv = { git = "https://github.com/pablovela5620/simplecv.git", rev = "a279fb50e2e332cbf99fcb885c086b916bb3fd16" }
mini-dust3r = { git = "https://github.com/pablovela5620/mini-dust3r.git", rev = "e122eab71d66f5b89cdef6e70c5ff71dcf8b34b6" }
rtmlib = { git = "https://github.com/pablovela5620/rtmlib.git" }
torch = { version = ">=2.5.1", index = "https://download.pytorch.org/whl/cu124" }
torchvision = { version = ">=0.20.1", index = "https://download.pytorch.org/whl/cu124" }
torchcodec = { version = ">=0.2.0", index = "https://download.pytorch.org/whl/cu124" }
manopth = { git = "https://github.com/gobanana520/manopth.git" }
vggt = { git = "https://github.com/facebookresearch/vggt.git", rev = "f8bf73ac25d5089cca2d6540a185697087fa2255" }

# gradio-rerun = { url = "https://huggingface.co/datasets/pablovela5620/gradio-rr-wheels/resolve/main/gradio_rerun-0.0.11-py3-none-any.whl" }

[tool.pixi.dependencies]
python = "==3.11"
rerun-sdk = ">=0.22.1"
numpy = "<2"
pytest = ">=8.3.4,<9"
icecream = ">=2.1.4,<3"
jupyterlab = ">=4.3.5,<5"
mmengine = ">=0.10.5,<0.11"
py-opencv = ">=4.11.0,<5"
cudnn = ">=9.7.1.26,<10"
orjson = ">=3.10.15,<4"
pip = ">=25.0.1,<26"
open3d = ">=0.19.0,<0.20"


[tool.pixi.tasks]
notebook_tutorial = { cmd = "jupyter lab notebooks", description = "Starts jupyter lab with notebooks for lerobot tutorials" }
_install-chumpy = { cmd = "pip install git+https://github.com/gobanana520/chumpy.git", description = "Installs chumpy" }

[tool.pixi.tasks._download-assembly101-sample]
cmd = """
test -e data/assembly101-sample \
  || (huggingface-cli download pablovela5620/Assembly101-Sample \
    --repo-type dataset \
    --include "assembly101-sample/**" \
    --local-dir data/)
"""
outputs = ["data/assembly101-sample"]
description = "Downloads an example assembly101 dataset from huggingface"

[tool.pixi.tasks.visualize-assembly101-dataset]
cmd = """
    python tools/view_exo_ego.py \
        --root-directory data/assembly101-sample/ \
        --sequence-name nusar-2021_action_both_9012-c07c_9012_user_id_2021-02-01_164345 \
        --dataset assembly101
    """
description = "Shows visualization of annotations in assembly101 dataset"
depends-on = ["_download-assembly101-sample"]

[tool.pixi.tasks._download-hocap-sample]
cmd = """
    test -e data/hocap/sample.zip \
    && test -e data/hocap/sample \
    || (
        mkdir -p data/hocap/ \
        && huggingface-cli download pablovela5620/hocap-sample \
        sample.zip --repo-type dataset \
        --local-dir data/hocap/ \
        && unzip -o data/hocap/sample.zip -d data/hocap/
    )
    """
outputs = ["data/hocap/sample.zip", "data/hocap/sample"]
depends-on = ["_install-chumpy"]
description = "Downloads and extracts an example polycam dataset from huggingface, this may take a while"

[tool.pixi.tasks.visualize-hocap-dataset]
cmd = """
    python tools/view_exo_ego.py
    """
description = "Shows visualization of annotations in assembly101 dataset"
depends-on = ["_download-hocap-sample"]


[tool.pixi.tasks.pose-estimation-assembly101]
cmd = """
python tools/person_3d_detection.py \
    --root-directory data/assembly101-sample/ \
    --sequence-name nusar-2021_action_both_9012-c07c_9012_user_id_2021-02-01_164345 \
    --dataset assembly101
    --num-videos-to-log 4
"""
depends-on = ["_download-assembly101-sample"]
description = "Runs 2d pose estimation and triangulation on body for assembly101 dataset"

[tool.pixi.tasks.pose-estimation-hocap]
cmd = """
python tools/person_3d_detection.py
"""
depends-on = ["_download-hocap-sample"]
description = "Runs 2d pose estimation and triangulation on body for hocap dataset"


[tool.ruff]
line-length = 150
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = [
    "E501", # Line too long.
    "F722", # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "F821", # Forward annotation false positive from jaxtyping. Should be caught by pyright.
]
