[project]
authors = [{ name = "pablovela5620", email = "pablovela5620@gmail.com" }]
description = "Add a short description here"
name = "pi0-lerobot"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [
    "tensordict>=0.7.0,<0.8",
    "wadler-lindig>=0.1.3,<0.2",
    "onnxruntime-gpu>=1.20.1,<2",
    "ipython-beartype>=0.1.0,<0.2",
    "lovely-numpy>=0.2.13,<0.3",
    "lovely-tensors>=0.1.18,<0.2",
    "jax>=0.6.0,<0.7",
    "jaxopt>=0.8.5,<0.9",
    "huggingface-hub[cli]>=0.31.2,<0.32",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12.4"

[tool.pixi.activation]
scripts = [".pixi.sh"]


[tool.pixi.pypi-dependencies]
pi0_lerobot = { path = ".", editable = true }
# openpi = { git = "https://github.com/Physical-Intelligence/openpi.git", rev = "f543cb1d87ada91645b1484ca5dab6ac3749be8d" }
# openpi-client = { git = "https://github.com/Physical-Intelligence/openpi.git", subdirectory = "packages/openpi-client" }
# lerobot = { git = "https://github.com/huggingface/lerobot", rev = "8548a87bd49c19bcda64cf0d6f205a378c1cebc3", extras = [
#     "pusht",
# ] }
simplecv = { git = "https://github.com/pablovela5620/simplecv.git", rev = "ae1363dacd3c2f2f2e07a48b0479ea8bc9a13c29" }
# mini-dust3r = { git = "https://github.com/pablovela5620/mini-dust3r.git", rev = "e122eab71d66f5b89cdef6e70c5ff71dcf8b34b6" }
rtmlib = { git = "https://github.com/pablovela5620/rtmlib.git" }
torch = { version = ">=2.5.1", index = "https://download.pytorch.org/whl/cu124" }
torchvision = { version = ">=0.20.1", index = "https://download.pytorch.org/whl/cu124" }
torchcodec = { version = ">=0.2.1", index = "https://download.pytorch.org/whl/cu124" }
arflow = { git = "https://github.com/pablovela5620/ARFlow.git", branch = "rr-0.23.1", subdirectory = "python" }
# manopth = { git = "https://github.com/gobanana520/manopth.git" }
# vggt = { git = "https://github.com/facebookresearch/vggt.git", rev = "f8bf73ac25d5089cca2d6540a185697087fa2255" }

[tool.pixi.dependencies]
python = "==3.11"
rerun-sdk = "==0.23.1"
numpy = ">=2.0.0"
pytest = ">=8.3.5,<9"
icecream = ">=2.1.4,<3"
jupyterlab = ">=4.3.5,<5"
orjson = ">=3.10.15,<4"
pip = ">=25.0.1,<26"
cuda = "12.4.*"
cuda-nvcc = "12.4.*"
cudnn = ">=9.8.0.87,<10"
py-opencv = ">=4.10.0,<5"
mmengine = ">=0.10.7,<0.11"
open3d = ">=0.18.0,<0.19"
hf-transfer = ">=0.1.9,<0.2"
grpcio = ">=1.62.2,<2"
grpcio-tools = ">=1.62.2,<2"
h5py = ">=3.13.0,<4"


[tool.pixi.tasks]
notebook_tutorial = { cmd = "jupyter lab notebooks", description = "Starts jupyter lab with notebooks for lerobot tutorials" }
_install-chumpy = { cmd = "pip install git+https://github.com/gobanana520/chumpy.git", description = "Installs chumpy" }

[tool.pixi.tasks._download-multicam-sample]
cmd = """
test -e data/multicam-sample \
  || (huggingface-cli download pablovela5620/multicam-sample \
    --repo-type dataset \
    --include "multicam-sample/**" \
    --local-dir data/)
"""
outputs = ["data/multicam-sample"]
description = "Downloads an example multicam dataset from huggingface"

[tool.pixi.tasks._download-assembly101-sample]
cmd = """
test -e data/assembly101-sample \
  || (huggingface-cli download pablovela5620/Assembly101-Sample \
    --repo-type dataset \
    --include "assembly101-sample/**" \
    --local-dir data/)
"""
outputs = ["data/assembly101-sample"]
description = "Downloads an example assembly101 dataset from huggingface"

[tool.pixi.tasks.visualize-assembly101-dataset]
cmd = """
    python tools/view_exo_ego.py \
        --root-directory data/assembly101-sample/ \
        --sequence-name nusar-2021_action_both_9012-c07c_9012_user_id_2021-02-01_164345 \
        --dataset assembly101
    """
description = "Shows visualization of annotations in assembly101 dataset"
depends-on = ["_download-assembly101-sample"]

[tool.pixi.tasks._download-hocap-sample]
cmd = """
    test -e data/hocap/sample.zip \
    && test -e data/hocap/sample \
    || (
        mkdir -p data/hocap/ \
        && huggingface-cli download pablovela5620/hocap-sample \
        sample.zip --repo-type dataset \
        --local-dir data/hocap/ \
        && unzip -o data/hocap/sample.zip -d data/hocap/
    )
    """
outputs = ["data/hocap/sample.zip", "data/hocap/sample"]
depends-on = ["_download-assembly101-sample"]
description = "Downloads and extracts an example polycam dataset from huggingface, this may take a while"

[tool.pixi.tasks.visualize-hocap-dataset]
cmd = """
    python tools/view_exo_ego.py
    """
description = "Shows visualization of annotations in assembly101 dataset"
depends-on = ["_download-hocap-sample"]


[tool.pixi.tasks.pose-estimation-assembly101]
cmd = """
python tools/person_3d_detection.py \
    --root-directory data/assembly101-sample/ \
    --sequence-name nusar-2021_action_both_9012-c07c_9012_user_id_2021-02-01_164345 \
    --dataset assembly101
    --num-videos-to-log 4
"""
depends-on = ["_download-assembly101-sample"]
description = "Runs 2d pose estimation and triangulation on body for assembly101 dataset"

[tool.pixi.tasks.pose-estimation-hocap]
cmd = """
python tools/person_3d_detection.py
"""
depends-on = ["_download-hocap-sample", "_download-multicam-sample"]
description = "Runs 2d pose estimation and triangulation on body for hocap dataset"

[tool.pixi.tasks.pose-estimation-multicam]
cmd = """
python tools/person_3d_detection.py --dataset multicam \
    --root-directory data/multicam-sample/ \
    --sequence-name card-shuffle1 \
    --num-videos-to-log 4 \
    --no-log-labels \
"""
depends-on = ["_download-hocap-sample", "_download-multicam-sample"]
description = "Runs 2d pose estimation and triangulation on body for hocap dataset"

[tool.pixi.tasks.calibrate-cameras-vggt]
cmd = """
python tools/calibrate_camera.py \
    --calibration-method vggt
"""
depends-on = ["_download-hocap-sample"]
description = "Calibrates camera using vggt method instead of using builtin calibration"


[tool.ruff]
line-length = 150
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = [
    "E501", # Line too long.
    "F722", # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "F821", # Forward annotation false positive from jaxtyping. Should be caught by pyright.
]
